# HaskellCommon

./: common.cabal  stack.yaml
src/Common/: Bools.hs  Foldables.hs  Functors.hs  Lists.hs  Maps.hs  Operators.hs  Parsec.hs  Tuples.hs
test/Common/: FoldablesTest.hs  ListsTest.hs  ParsecTest.hs
