name:                common
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/common#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common.Operators, Common.Lists, Common.Foldables, Common.Parsec, Common.Maps,
                       Common.Bools
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
  default-language:    Haskell2010
--
--test-suite common-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Common/FoldablesTest.hs
--  build-depends:       base
--                     , common
--                     , QuickCheck == 2.9.2
--                     , HUnit == 1.5.0.0
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  build-depends:       base
                     , common
                     , QuickCheck == 2.9.2
                     , containers >= 0.4 && < 1.0
                     , directory  >= 1.1 && < 2.0
                     , filepath   >= 1.3 && < 2.0
                     , HUnit == 1.5.0.0
                     , tasty >= 0.11.2.3
                     , tasty-discover >= 3.0.2
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck
                     , parsec >= 3.1.11
  other-modules:
                       Common.FoldablesTest
                       Common.ListsTest
                       Common.ParsecTest

  default-language: Haskell2010
